--- a/app/assets/stylesheets/cornell/_responsive-768px-979px.css.scss
+++ b/app/assets/stylesheets/cornell/_responsive-768px-979px.css.scss
@@ -13,14 +13,4 @@
   		width: 3em;
   		padding: 2px; }
 	}
-	.cover {
-		.icon-cover {
-			width: 100px;
-			height: 150px;
-			i {
-				top: -110px;
-				margin-left: 10px;
-			}
-		}
-	}
 }
